# Entanglement

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  macos.yml  release.yml
.kiro/specs/codebase-refactoring/: design.md  requirements.md  tasks.md
client/cli/: Cargo.toml  build.rs
client/cli/src/: api.rs  chunking.rs  config.rs  daemon.rs  db.rs  main.rs  sync.rs  tui.rs  watch.rs
client/cli/src/api/: grpc.rs  mod.rs  rest.rs
client/macos/EntanglementAppIIcon.icon/: icon.json
client/macos/Entanglement_old.bak/: Info.plist  main.swift
client/macos/Entanglement_old.bak/EntanglementClean.xcodeproj/: project.pbxproj
client/macos/Entanglement_old.bak/EntanglementClean.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
client/macos/Entanglement_old.bak/EntanglementClean.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: pre-start.sh  setup-jwt.sh
security_audits/: 2025-12-22_fifth_comprehensive_audit.md  2025-12-22_third_audit_sticky_ids_websocket.md  2025-12-22_web_manager_security_assessment.md
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  INSTALL_README.md  README.md  build.rs  docker-compose.yml  entrypoint.sh  verify_audit.py
server/migrations/: 20240101000001_initial.sql  20240101000002_chunks.sql  20240101000003_blake3_tiering.sql  20240101000004_file_ownership.sql  20240101000005_fix_corrupted_paths.sql  20251221000000_add_original_hash_id.sql  20251222000000_add_original_hash_id_unique_constraint.sql  20251223000000_password_reset_email_verification.sql  20251223000001_conflicts_sharing_selective_sync.sql  20251224000000_username_auth.sql  20260225000000_add_indexes.sql
server/proto/: sync.proto
server/src/: config.rs  lib.rs  main.rs
server/src/api/: mod.rs  ws.rs
server/src/api/grpc/: mod.rs  sync.rs
server/src/api/rest/: admin.rs  auth.rs  blobs.rs  chunks.rs  conflicts.rs  error.rs  files.rs  mod.rs  routes.rs  selective_sync.rs  sharing.rs  types.rs  v1.rs  versions.rs
server/src/auth/: mod.rs  token.rs
server/src/db/: chunks.rs  containers.rs  files.rs  mod.rs  models.rs  users.rs  versions.rs
server/src/storage/: blob.rs  blob_io.rs  cas.rs  chunking.rs  mod.rs  tiering.rs
server/src/tui/: mod.rs  setup.rs
server/web/: admin.html  app.js  index.html  manifest.json  share.html  style.css  sw.js
server/web/icons/: README.md
