[package]
name = "tangled"
version = "0.1.0"
edition = "2021"
description = "Entanglement file sync server"
license = "MIT"

[[bin]]
name = "tangled"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }



# REST API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "request-id", "util"] }
tower_governor = "0.4"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }

# Cryptography
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4"

# Content Defined Chunking (CDC) for delta sync
fastcdc = "3.1"

# Compression
zstd = "0.13"

# CLI password input
rpassword = "7"

# Auth
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streaming
tokio-stream = "0.1"
async-stream = "0.3"

# Config
dotenvy = "0.15"
dirs = "5"

# File indexing
walkdir = "2"
blake3 = "1.8.2"



[dev-dependencies]
tempfile = "3"

