[package]
name = "tangle"
version = "0.2.0"
edition = "2021"
description = "Entanglement file sync CLI client"
license = "MIT"

[[bin]]
name = "tangle"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for REST API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "6"

# Content-defined chunking + hashing
fastcdc = "3.1"
blake3 = "1.8.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "1"
anyhow = "1"
walkdir = "2"
rpassword = "7"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Local database
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
